- add:     Add 'Test' button for 'Pause', 'Resume' and 'Abort' action settings
- change:  Change Action module option 'Check for errors' to 'Test'
- change:  Sequence title now displays in the upper right background
- add:     Addon version now displays in the upper left background
- change:  Trivia Slides directory name changed to Trivia - will auto-rename when loading content

[- 0.0.50 -]

- change:  .cvseq file format is now JSON instead of XML
- add:     Option for action modules to check action file errors
- add:     Option in settings in 'Action' section to check action files errors

[- 0.0.49 -]

- change:  Switch from demo mode to normal now works more intuitively (i.e. trailers are not lost)
- change:  You can now set the count for all video bumper types except file
- add:     In section 'Content' as a subsetting to 'Trailers: Kodi Database' added 'Ignore YouTube trailers'
- add:     In section 'Content' as a subsetting to 'Trailers: Kodi Database' added 'Mark watched if movie is watched'

[- 0.0.48 -]

- add:     Scan Trailers directory recursively
- change:  Heading 'Trailers Scrapers' in section 'Content' changed to 'Content Scrapers'
- add:     Unavailable trailers will now be removed from the database when updating content
- fix:     When trivia paused during music fade in, music would not play
- fix:     Error when 'Enable video skips' was disabled
- change:  'Scrapers' source for Trailers renamed to 'Content'
- change:  'Scrapers filter (by priority)' renamed to 'Content filter (scrapers)'
- add:     Kodi database trailers now stored with release year for ordering
- add:     Trailer setting 'Content order' with the options 'Newest' and 'Random'
- change:  'Scope (Restart editor to apply)' moved to advanced section and renamed 'Scope (requires add-on restart)'
- add:     Setting 'Execute action on sequence resume' now has options Off, Last and File (default=File). Last will use the last module action file executed