@@ -11,6 +11,7 @@ Changelog for CinemaVision
 - change:  Sequence title now displays in the upper right background
 - add:     Addon version now displays in the upper left background
 - change:  Trivia Slides directory name changed to Trivia - will auto-rename when loading content
+- change:  Added more details to the playlist editor
 
 [- 0.0.50 -]
 
